[package]
name = "binance_ws_client"
description = "A Rust client for the Binance WebSocket API"
version = "0.2.0"
license = "Apache-2.0"
repository = "https://github.com/gmosx/binance-sdk-rust/tree/main/binance_client_ws"
keywords = ["binance", "websocket", "client"]
authors = ["Georgios Moschovitis <george.moschovitis@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
async-stream = "0.3"
rand = "0.8"
